Fix blurry fullscreen textarea (Thx @jaredstehler)
https://s3.amazonaws.com/uploads.hipchat.com/10819/324461/1TBHkqZuBUcBtoW/Screen%20Shot%202014-03-19%20at%206.59.20%20PM.png

--- a/assets/nav-signature.css
+++ b/assets/nav-signature.css
@@ -179,7 +179,7 @@
     letter-spacing: .02em;
 }
 
-body.nav-signature-opened-manually > :not(#hs-nav-v3) {
+body.nav-signature-opened-manually > :not(#hs-nav-v3):not(.widearea-overlayLayer) {
     -webkit-filter: blur(5px);
     -webkit-transition: -webkit-filter .5s 1s;
     -webkit-transform: translateZ(0);
